tests/fail/mixed-covariance-misuse.stderr
error: lifetime may not live long enough
  --> tests/fail/mixed-covariance-misuse.rs:10:5
   |
6  | fn lengthen<'b, 'short, 'long: 'short>(
   |                 ------  ----- lifetime `'long` defined here
   |                 |
   |                 lifetime `'short` defined here
...
10 |     short_short
   |     ^^^^^^^^^^^ function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
